@@ -46,8 +46,16 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens java.naming/com.sun.jndi.ldap=ldapclienterrorcleanertest</argLine>
+                    <argLine>--add-opens java.naming/com.sun.jndi.ldap=ldapclienterrorcleaner</argLine>
                 </configuration>
             </plugin>
         </plugins>
